apps/media/jellyfin/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: media
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`jellyfin.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
      middlewares:
        - name: trusted-only
          namespace: kube-system
    - match: Host(`jellyfin.${SECRET_PUBLIC_DOMAIN}`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
      middlewares:
        - name: trusted-only
          namespace: kube-system
        - name: redirect-to-https
          namespace: kube-system
